[project]
name = "telecom-rag"
version = "0.1.0"
description = "RAG telecom customer-care chatbot"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-core>=0.3",
    "langchain-groq>=0.2",
    "langchain-huggingface>=0.1",
    "langchain-chroma>=0.1",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "torchvision>=0.20",
    "pypdf>=4.0",
    "python-dotenv>=1.0",
    "streamlit>=1.36",
    "pandas>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
